2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs: When adding a note from the server, use
	  NoteManager.CreateWithGuid followed by Note.LoadForeignNoteXml. 
	  This allows the note XML to be verified by LoadForeignNoteXml
	  before it actually gets into Tomboy.
	* Tomboy/NoteManager.cs: Refactor NoteManager.Create* methods to allow
	  creating a new note with a specified GUID.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Clear out the treeview and reset the progress
	  bar when starting a new sync.
	* Tomboy/TomboySyncClient.cs: Set the default revision to -1.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs, Tomboy/FileSystemSyncServer.cs,
	  Tomboy/Preferences.cs: Adding TransactionID guid to the lock file,
	  unique for each attempted transaction with the server.  Renaming
	  LockOwner to ClientId; note that the ClientId can be changed by the
	  user and is not guaranteed to be unique.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Note.cs: Check for null before acting on buffer (Note may not
	  have been opened yet).

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs, Tomboy/RemoteControl.cs, Tomboy/Note.cs: New
	  Note.LoadForeignNoteXml method, used by sync and
	  RemoteControl.SetNoteContentsCompleteXml.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Stubbed in a Synchronize Now button.
	* Tomboy/SyncManager.cs: Get the SyncDialog from the Tomboy class.
	* Tomboy/Tomboy.cs: Create and expose the SyncDialog.
	* Tomboy/NoteWindow.cs: Removed "Synchronize Notes" from the Tools
	  menu.
	* Tomboy/ActionManager.cs, data/UIManagerLayout.xml: Added
	  NoteSynchronizationAction.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncManager.cs: Added in descriptive status messages (which
	  we'll need to change later) for the sync dialog.  Also added code